# Icefold3D

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
CMake/: CMakeApi.Core.cmake  CMakeApi.Sysconf.cmake  CMakeApi.Workspace.cmake  CMakeLists.txt
Source/Appx/Boot/Win32/: CMakeLists.txt  Win32Launcher.cpp
Source/Main/: CMakeLists.txt
Source/Main/Ic3/CoreLib/: CMakeLists.txt  Exception.cpp  Exception.h  ExceptionCommon.h  ExceptionResult.h  ExceptionUtils.h  MathImports.h  PixelCommon.h  Prerequisites.cpp  Prerequisites.h  ReturnValueObject.h
Source/Main/Ic3/CoreLib/Memory/: CommonMemoryDefs.cpp  CommonMemoryDefs.h  LinearMemoryAllocator.h
Source/Main/Ic3/CoreLib/Prerequisites/: CoreDefs.h  CoreEnums.h  DebugLayer.cpp  DebugLayer.h  DynamicInterface.cpp  DynamicInterface.h  Result.h  ResultCode.h  SharedHandle.h
Source/Main/Ic3/CoreLib/Reflection/: EnumTypeInfo.cpp  EnumTypeInfo.h
Source/Main/Ic3/CoreLib/Signals/: SignalCommon.h  SignalEmitter.h  SignalProxy.h  SignalReceiver.h
Source/Main/Ic3/CoreLib/Sync/: AtomicRWLock.h  CommonSyncDefs.h  Lockable.h  MutexCommon.h  MutexLockTypes.h  MutexStdDefs.h  SpinLock.h  SyncInterface.h
Source/Main/Ic3/CoreLib/Threading/: CommonSyncDefs.h  Lockable.h  MutexCommon.h
Source/Main/Ic3/CoreLib/TypeInfo/: TPIDefsCoreEnum.cpp
Source/Main/Ic3/CoreLib/Utility/: GDSCommon.h  GDSCore.h  HFSIdentifier.h  Logger.h  RXMLParser.cpp  RXMLParser.h  RectAllocator.cpp  RectAllocator.h  RuntimeAssert.cpp  RuntimeAssert.h  XMLCommon.h  XMLTypes.cpp  XMLTypes.h
Source/Main/Ic3/Cppx/: Aligned.h  ArrayIterator.h  ArrayView.h  BitUtils.h  Bitmask.h  BitmaskAtomic.h  ByteArray.h  CMakeLists.txt  Chrono.h  ConcurrentStack.h  FSUtils.cpp  FSUtils.h  FlatMap.h  Hash.cpp  Hash.h  IntrusivePtr.h  Memory.cpp  Memory.h  MemoryBuffer.h  Optional.h  PathNameIterator.h  PolicyBasedDynamicArray.h  Prerequisites.h  Range.h  RawDataArray.h  RefCounter.h  RefWrapper.h  STLHelperAlgo.h  SharedString.h  SortedArray.h  StaticAlgo.h  StaticLimits.h  StaticVector.h  StringExt.h  StringUtils.h  StringView.h  TypeTraits.h  UUID.h  Utilities.h  Variant.h  (+1 more)
Source/Main/Ic3/Graphics/Common/: GraphicsCoreDefs.h  GraphicsCoreMetrics.h
Source/Main/Ic3/Graphics/GCI/: CMakeLists.txt  CommandContext.cpp  CommandContext.h  CommandList.cpp  CommandList.h  CommandListImplGenericRenderPass.h  CommandListImplRenderPassGeneric.cpp  CommandListImplRenderPassGeneric.h  CommandSystem.cpp  CommandSystem.h  CommonCommandDefs.h  DisplayCommon.h  DisplayManager.cpp  DisplayManager.h  GPUCapabilities.h  GPUDevice.cpp  GPUDevice.h  GPUDeviceFeatureQuery.cpp  GPUDeviceFeatureQuery.h  GPUDeviceNull.h  GPUDriver.cpp  GPUDriver.h  GPUDriverAPI.h  GPUDriverNull.h  GPUDriverPlugin.h  GPUUtils.cpp  GPUUtils.h  Prerequisites.h  PresentationLayer.cpp  PresentationLayer.h  SystemDisplayManager.cpp  SystemDisplayManager.h
Source/Main/Ic3/Graphics/HW3D/: CMakeLists.txt
Source/Main/Ic3/Math/: ArrayOps.h  ArrayOpsSIMD.inl  CMakeLists.txt  Color.cpp  Color.h  Matrix.h  MatrixOps.h  MatrixOpsSIMD.inl  MatrixUtils.h  MatrixUtilsSIMD.inl  Prerequisites.cpp  Prerequisites.h  Rect.h  Utility.h  Vector.h  VectorOps.h
Source/Main/Ic3/NxMain/: CMakeLists.txt  Exception.h  Prerequisites.h
Source/Main/Ic3/NxMain/CGT/: Image.cpp  Image.h
Source/Main/Ic3/NxMain/Camera/: CameraCommonDefs.h  CameraController.cpp  CameraController.h
Source/Main/Ic3/NxMain/FX/: Material.cpp  Material.h  MaterialCommon.cpp  MaterialCommon.h  MaterialLibrary.cpp  MaterialLibrary.h
Source/Main/Ic3/NxMain/GCI/: CommonGCIDefs.h  ConstantBufferProxy.cpp  ConstantBufferProxy.h  GCRBuffer.cpp  GCRBuffer.h  GCRBufferCommon.h  GCRBufferManager.cpp  GCRBufferManager.h  GCRGeometryBuffer.h  GCRResource.h  GCRTexture.cpp  GCRTexture.h  HWBuffer.cpp  HWBuffer.h  HWBufferCommon.h  HWBufferManager.cpp  HWBufferManager.h  HWGeometryBuffer.cpp  HWGeometryBuffer.h  HardwareBuffer.cpp  HardwareBuffer.h  HardwareBufferCommon.h  HardwareBufferManager.cpp  HardwareBufferManager.h  HardwareTexture.cpp  HardwareTexture.h  IACommonDefs.cpp  IACommonDefs.h  IACommonDefs.inl  IAVertexAttribLayout.cpp  IAVertexAttribLayout.h  IAVertexAttribLayout.inl  IAVertexStreamLayout.cpp  IAVertexStreamLayout.h  IAVertexStreamLayout.inl  ShaderInputSemantics.cpp  ShaderInputSemantics.h  ShaderResourceDefs.h  ShaderUtils.cpp  ShaderUtils.h  (+28 more)
Source/Main/Ic3/NxMain/Geometry/: DataTypesConv.h  GeometryBuffer.h  GeometryCommonDefs.cpp  GeometryCommonDefs.h  GeometryContainer.cpp  GeometryContainer.h  GeometryDataFormat.h  (+30 more)
Source/Main/Ic3/Platform/: CMakeLists.txt  Debug.cpp  Debug.h  FileLocationInfo.cpp  FileLocationInfo.h  GDS.h  Platform.h  SyncCommon.cpp  SyncCommon.h
Source/Main/Ic3/Script/: CMakeLists.txt  Prerequisites.cpp  Prerequisites.h  ScriptModule.cpp  ScriptModule.h  ScriptSystem.cpp  ScriptSystem.h
Source/Main/Ic3/System/: AssetCommon.h  AssetSystem.cpp  AssetSystem.h  AssetSystemNative.h  CMakeLists.txt  DisplayCommon.cpp  DisplayCommon.h  DisplayConfiguration.cpp  DisplayConfiguration.h  DisplaySystem.cpp  DisplaySystem.h  DisplaySystemNative.h  DynamicLib.h  EventCommon.h  EventCore.cpp  EventCore.h  EventCoreNative.h  EventDefApp.h  EventDefInputKeyboard.h  EventDefInputMouse.h  EventDefWindow.h  EventObject.h  EventSource.cpp  EventSource.h  FileCommon.cpp  FileCommon.h  FileManager.cpp  FileManager.h  FileManagerNative.h  Frame.h  MetalCommon.h  MetalDriver.h  MetalDriver.mm  MetalNative.h  OpenGLCommon.cpp  OpenGLCommon.h  OpenGLDriver.cpp  OpenGLDriver.h  OpenGLNative.h  PerfCounter.cpp  (+13 more)
Source/Samples/: CMakeLists.txt
Source/Samples/GfxTest/: CMakeLists.txt  MainGfx.cpp  MainGfx.hxx  MainGfx.mm  MeshDefs.h
Source/Samples/Render01/: CMakeLists.txt  Main.mm  Main01.mm  MeshDefs.h
Source/Samples/Script01/: CMakeLists.txt  Main.cpp  Main.mm
Source/Samples/SysPipeClient/: CMakeLists.txt  Main.cpp
Source/Samples/SysPipeServer/: CMakeLists.txt  Main.cpp  TextMessage.h
Source/Tools/IceLogViewer/: Application.cpp  Application.h  CMakeLists.txt  Main.cpp
Source/Tools/IceLogViewer/UI/: MainWindow.cpp  MainWindow.h
(+716 files in other folders)
